CSS/style.css
@charset "utf-8";
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@800&display=swap');

h1{
  background: rgb(100,149,237);
  font-family: 'Open Sans', sans-serif;
  font-size: 50px;
  font-weight: normal;
  color: rgb(255,255,255);
  margin: 0;
  padding: 20px;
}

h2{
  background: rgb(115, 147, 179);
  font-family: 'Open Sans', sans-serif;
  font-size: 30px;
  font-weight: normal;
  color: rgb(255,255,255);
  margin: 0;
  padding: 20px;
}

h3{
  background: rgb(0,80,181);
  font-family: 'Open Sans', sans-serif;
  font-size: 20px;
  font-weight: normal;
  color: rgb(255,255,255);
  margin: 0;
  padding: 20px;
}

body {
    background: rgb(255,255,255);
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    font-weight: normal;
    color: rgb(47,79,79);
    margin: auto;
    padding: 60px;
    max-width: 900px
}

#geography {
  padding: 30px;
  margin: 0;
  max-width: 900px;
  display: grid;
  grid-template-columns: auto auto auto;
}

#economy {
	padding: 30px;
	margin: 0;
  max-width: 900px;
  display: grid;
  grid-template-columns: auto auto auto;
}

#communications {
	padding: 30px;
	margin: 0;
  max-width: 900px;
  display: grid;
  grid-template-columns: auto auto auto;
}

.grid-container-intro {
  border: 3px solid transparent;
  border-radius: 5px 0px 0px 5px;
  border-width: 3px 3px 3px 3px;
  padding: 7px;
}

.grid-container-headers{
  border: 3px solid transparent;
  border-radius: 5px 0px 0px 5px;
  border-width: 3px 3px 3px 3px;
  padding: 7px;
}

.grid-container {
  display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;

    grid-template-areas:
          "head head2 head3"
          "main main2 main3";

          border: 3px solid transparent;
          border-radius: 5px 0px 0px 5px;
          border-width: 3px 3px 3px 3px;
          padding: 7px;
}


.grid-item {
  border: 3px solid rgb(115, 147, 179);
  display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;

    grid-template-areas:
          "head head2 head3"
          "main main2 main3";
}

.one {
  grid-column: 1;
  grid-row: 1 / 5;
}
.two {
  grid-column: 2;
  grid-row: 1 / 5;
}
.three {
  grid-column: 3;
  grid-row: 1 / 5;
}


ul {
  font-size: 12px;
}

.flag {
	padding: 10px;
  border: 3px solid transparent;
  margin-left: auto;
  margin-right: auto;
  margin-top:auto;
  margin-bottom:auto;

}

.map {
  padding: 10px;
  border: 3px solid transparent;
  margin-left: auto;
  margin-right: auto;
  margin-top:auto;
  margin-bottom:auto;
}

table, th, td {
  padding: 10px;
  border: 2px solid rgb(0,80,181);
  border-collapse: collapse;
  margin-left: auto;
  margin-right: auto;
  margin-top:auto;
  margin-bottom:auto;
}


a:link {
  color:rgb(75,0,130);
}

a:visited {
  color: rgb(147,112,219);
}

a:hover {
  color: rgb(230,230,250);
}

a:active {
  color: rgb(172,79,198);
}

